1 - Modifique o tamanho do h1 para 65 pixels 2 - Modifique a cor do texto do h1 para laranja 3 - Modifique a cor de fundo da lista não ordenada 4 - Crie uma classe para modificar a cor de fundo da tag p e da ul ao mesmo tempo

--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-02-html-e-css-primeiros-passos-em-css/exercicios3.2/exercicio3.2.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-02-html-e-css-primeiros-passos-em-css/exercicios3.2/exercicio3.2.html
@@ -15,7 +15,7 @@
         background-color: salmon;
       }
       .color-background {
-        background-color: salmon;
+        background-color: olivedrab;
       }
     </style>
   </head>
