--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-02-html-e-css-primeiros-passos-em-css/exercicios3.2/exercicio3.2v.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-02-html-e-css-primeiros-passos-em-css/exercicios3.2/exercicio3.2v.html
@@ -11,6 +11,7 @@
       p {
         font-weight: 600;
         font-size: 3em;
+        color: orchid;
       }
       body {
         font-size: 16px;
