Retirando o CSS e criando um link de CSS externo

--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-02-html-e-css-primeiros-passos-em-css/exercicios3.2/exercicio3.2.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-02-html-e-css-primeiros-passos-em-css/exercicios3.2/exercicio3.2.html
@@ -2,22 +2,9 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-
     <title>Primeiros passos em CSS</title>
-    <style>
-      h1 {
-        font-size: 65px;
-      }
-      #color-style {
-        color: orange;
-      }
-      #color-background {
-        background-color: salmon;
-      }
-      .color-background {
-        background-color: olivedrab;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style3.2.css" />
+    <style></style>
   </head>
   <body>
     <h1 id="color-style">Exercícios 3.2</h1>
