Exclusão do conteudo que estava na tag style

--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-02-html-e-css-primeiros-passos-em-css/exercicios3.2/exercicio3.2v.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-02-html-e-css-primeiros-passos-em-css/exercicios3.2/exercicio3.2v.html
@@ -3,33 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>Exercícios 3.2/1</title>
-    <style>
-      h1 {
-        font-family: sans-serif;
-        color: cadetblue;
-      }
-      p {
-        font-weight: 600;
-        font-size: 3em;
-        color: orchid;
-      }
-      body {
-        font-size: 16px;
-      }
-      .list-style {
-        font-style: italic;
-        text-align: center;
-      }
-      #color-yellow {
-        background-color: yellow;
-      }
-      #color-red {
-        background-color: red;
-      }
-      #color-brown {
-        background-color: brown;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style3.2v.css" />
+    <style></style>
   </head>
   <body>
     <h1>Exercícios 3.2/1</h1>
