--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/exercicio3.3.3.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/exercicio3.3.3.html
@@ -12,9 +12,9 @@
     <p>Top 3 dos melhores sites que existem na web.</p>
     <!-- 1. Adicione uma lista ordenada dos 3 melhores sites que você conhece. -->
     <ol>
-      <li>Google</li>
-      <li>Youtube</li>
-      <li>Facebook</li>
+      <li><strong>Google</strong></li>
+      <li><strong>YouTube</strong></li>
+      <li><strong>Facebook</strong></li>
     </ol>
     <p><strong>Principais motivos para eu gostar deles.</strong></p>
     <!-- 4. Adicione uma lista não ordenada com, pelo menos, 3 características que você gosta. -->
