1 - Adicione uma lista ordenada dos 3 melhores sites que você conhece. 2 - Crie um arquivo no mesmo diretório e nomeie-o de 'style.css'. 3 - Nesse arquivo .css, adicione os estilos para que: O texto das tags 'h1' e 'p' estejam centralizados. A cor de fundo da sua lista mude quando o cursor estiver sobre o item. A fonte do item mude quando ele for clicado. 4 - Adicione uma lista não ordenada com, pelo menos, 3 características que você gosta. 5 - No 'style.css', adicione a propriedade 'list-style: none' para ambas as listas.

--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/exercicio3.3.3.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/exercicio3.3.3.html
@@ -9,12 +9,13 @@
   </head>
   <body>
     <h1>Lista dos Melhores Sites que já vi.</h1>
-    <p>Top 3 dos melhores sites que existem na web.</p>
+    <p>Top 4 dos melhores sites que existem na web.</p>
     <!-- 1. Adicione uma lista ordenada dos 3 melhores sites que você conhece. -->
     <ol>
       <li><strong>Google</strong></li>
       <li><strong>YouTube</strong></li>
       <li><strong>Facebook</strong></li>
+      <li><strong>Baidu</strong></li>
     </ol>
     <p><strong>Principais motivos para eu gostar deles.</strong></p>
     <!-- 4. Adicione uma lista não ordenada com, pelo menos, 3 características que você gosta. -->
@@ -28,6 +29,7 @@
         Google.com é o site número 1 mais popular no mercado global, assim como
         o seu braço Google.com.br aqui no Brasil.
       </li>
+      <br />
       <li>
         Você provavelmente assistiu a um vídeo no <strong>YouTube</strong> esta
         semana, assim como muitas outras pessoas. O YouTube é o site de vídeo
@@ -35,12 +37,23 @@
         YouTube todos os dias. O YouTube.com é o site número 2 mais popular no
         mercado global.
       </li>
+      <br />
       <li>
         O <strong>Facebook</strong> é o site de mídia social mais popular da
         web. Mais de 1,4 bilhão de usuários ativos acessam o Facebook
         diariamente em todo o mundo para se comunicar com familiares e amigos.
         Em 2019, o Facebook.com é o site número 3 mais popular no mercado
         global.
+      </li>
+      <br />
+      <li>
+        Com 70% do mercado de buscas, o <strong>Baidu</strong> é o maior
+        mecanismo de busca no idioma chinês e é usado por milhões de pessoas
+        todos os dias. A estimativa é que 90% da China use o
+        <strong>Baidu</strong> como um mecanismo de pesquisa. Assim como o
+        Google, o Baidu oferece sites complementares, incluindo uma alternativa
+        ao AdWords, Translate e Maps. O Baidu é o site número 4 mais popular do
+        mundo e o número 1 mais popular na China.
       </li>
     </ul>
   </body>
