1 - Adicione uma lista ordenada dos 4 melhores sites que você conhece. 2 - Crie um arquivo no mesmo diretório e nomeie-o de 'style.css'. 3 - Nesse arquivo .css, adicione os estilos para que: O texto das tags 'h1' e 'p' estejam centralizados. A cor de fundo da sua lista mude quando o cursor estiver sobre o item. A fonte do item mude quando ele for clicado. 4 - Adicione uma lista não ordenada com, pelo menos, 3 características que você gosta. 5 - No 'style.css', adicione a propriedade 'list-style: none' para ambas as listas.

--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/exercicio3.3.3.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/exercicio3.3.3.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Lista dos Melhores Sites que já vi.</h1>
     <p>Top 4 dos melhores sites que existem na web.</p>
-    <!-- 1. Adicione uma lista ordenada dos 3 melhores sites que você conhece. -->
+    <!--  Adicionando uma lista ordenada dos 4 melhores sites que você conhece. -->
     <ol>
       <li><strong>Google</strong></li>
       <li><strong>YouTube</strong></li>
@@ -18,7 +18,7 @@
       <li><strong>Baidu</strong></li>
     </ol>
     <p><strong>Principais motivos para eu gostar deles.</strong></p>
-    <!-- 4. Adicione uma lista não ordenada com, pelo menos, 3 características que você gosta. -->
+    <!--  Adicionando uma lista não ordenada com, pelo menos, 4 características que você gosta. -->
     <ul>
       <li>
         O <strong>Google</strong> é o mecanismo de pesquisa mais popular do
